fix line spacing on link-list itens

--- a/css/left-bar.css
+++ b/css/left-bar.css
@@ -31,6 +31,7 @@
   border-radius: 0 0 0 0;
   font-weight: normal;
   font-size: 14px;
+  line-height: 17px;
 }
 
 #content .box-2 .link-list-block h3.empty + ul {
